--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "typescript": "5.0.2"
   },
   "devDependencies": {
+    "@types/google.maps": "^3.52.3",
+    "@types/styled-components": "^5.1.26",
     "babel-plugin-styled-components": "^2.0.7"
   }
 }
